# sam

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/k8s/: dex-config.yaml  dex-deployment.yaml  sam-hub-template.yaml  sam-node-openclaw-template.yaml  sam-node-template.yaml  sam-node-vllm-template.yaml
.github/workflows/: deploy.yaml  e2e.yml  release.yaml  test.yaml  test_python.yml
api/: constants.go  hub_client.go  policy.go  sam.pb.go  sam.proto
cmd/mcp-client/: main.go
cmd/sam/: agent_discovery.go  (+10 more)
cmd/sam-agent/: agent_discovery.go  call.go  inspect.go  mesh_get_agents.go  output.go  proxy.go  proxy_reserved_test.go  publish.go  publish_card.go  publish_mcp.go  up.go
cmd/sam-hub/: config.go  config_test.go  conngater.go  hooks.go  http.go  hub.go  keyring.go  keyring_test.go  main.go  main_test.go  server.go  sync.go
cmd/sam-node/: config.go  config_test.go  gate.go  inference_service.go  inference_test.go  main.go  main_test.go  mcp.go  mcp_handlers.go  mcp_handlers_test.go  mcp_service.go  mcp_test.go  middleware.go  middleware_test.go  node.go  node_test.go  oidc_test.go  proxy_test.go  sidecar.go  sidecar_test.go  static_service_test.go  store.go  store_test.go
docs/: README.md  agent_integration.md  index.html  release-tracks.md
hack/: gen-proto.sh
sam-mcp-python/: README.md  pyproject.toml  test_client.py
sam-mcp-python/src/sam_mcp/: __init__.py  client.py  protocol.py  transport.py
sam-mcp-python/src/sam_mcp/adapters/: __init__.py  langchain.py
sam-mcp-python/tests/e2e/: test_e2e.py
sam-mcp-python/tests/unit/: test_unit.py
(+54 files in other folders)
